<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        />
    <item
        android:id="@+id/nav_leaderboard"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_leaderboard"
        android:title="@string/leader_board"
        />


    <item
        android:id="@+id/nav_calculator"
        android:icon="@drawable/ic_calculator"
        android:title="@string/calculator"
        />

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_account"
        android:title="@string/my_account"
        />
</menu>